Fix position and spacing problem with logo

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -9,7 +9,6 @@ body {
     background-color: rgb(44, 41, 41);
 }
 
-
 footer {
     width: 100%;
 }
@@ -19,12 +18,17 @@ header {
     border-bottom: 5px solid rgb(120, 88, 56);
     width: 100%;
     text-decoration: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 20;
+    margin-bottom: 60px;
 }
 
 .logo {
-    height: 80%;
-    padding-top: 5%;
-    padding-left: 5%;
+    height: 100%;
+    padding: 15px;
+
 }
 
 nav {
